Fixed overflow on mobile, update style to be more dynamic

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ a {
 /* normal carousel NON HOVER styles */
 .carousel {
   position: relative;
+  overflow: hidden;
 }
 
 .carousel-content {
@@ -408,7 +409,7 @@ a {
 }
 
 /* two people image section  */
-.case-study .two-people img {
+.single-image img {
   width: 100%;
   height: 60vh;
   object-fit: cover;
